Added routes and Updated main
