# docs/swagger.yaml
@@ -1,4 +1,167 @@
+definitions:
+  controllers.AgeRatingCategoryInput:
+    properties:
+      description:
+        type: string
+      name:
+        type: string
+    type: object
+  models.AgeRatingCategory:
+    properties:
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        description: gorm.Model
+        type: integer
+      name:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  models.Movie:
+    properties:
+      age_rating_category_id:
+        type: integer
+      created_at:
+        type: string
+      id:
+        description: gorm.Model
+        type: integer
+      title:
+        type: string
+      updated_at:
+        type: string
+      year:
+        type: integer
+    type: object
 info:
-  contact: {}
-paths: {}
+  contact:
+    email: support@swagger.io
+    name: API Support
+    url: http://www.swagger.io/support
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  termsOfService: http://swagger.io/terms/
+paths:
+  /age-rating-categories:
+    get:
+      description: Get List of Age Rating Category
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.AgeRatingCategory'
+            type: array
+      summary: Get All Age Rating Category
+      tags:
+      - AgeRatingCategory
+    post:
+      description: Create new Age Rating Category
+      parameters:
+      - description: the body to create new age rating category
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.AgeRatingCategoryInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.AgeRatingCategory'
+      summary: Create Age Rating Category
+      tags:
+      - AgeRatingCategory
+  /age-rating-categories/{id}:
+    delete:
+      description: Delete one Age Rating category by Id
+      parameters:
+      - description: Age Eating Category Id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: boolean
+            type: object
+      summary: Delete an Age Rating Category by Id
+      tags:
+      - AgeRatingCategory
+    get:
+      description: Get one Age Rating category by Id
+      parameters:
+      - description: Age Eating Category Id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.AgeRatingCategory'
+      summary: Get an Age Rating Category by Id
+      tags:
+      - AgeRatingCategory
+    patch:
+      description: Update one Age Rating category by Id
+      parameters:
+      - description: Age Eating Category Id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: the body to create new age rating category
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.AgeRatingCategoryInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.AgeRatingCategory'
+      summary: Update an Age Rating Category by Id
+      tags:
+      - AgeRatingCategory
+  /age-rating-categories/{id}/movies:
+    get:
+      description: Get all movies of Age Rating Category by id
+      parameters:
+      - description: Age Eating Category Id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Movie'
+            type: array
+      summary: Get movies by Age Rating Category by id
+      tags:
+      - AgeRatingCategory
 swagger: "2.0"
